// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleCard /> by default matches with snapshot 1`] = `
<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 jmZvoc"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 kCDtHN"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        
      </div>
    </div>
  </div>
  <div
    className="crowdfunding-card__StyledTitleAndSubtitle-sc-1b0f5ki-1 hPlKae"
  >
    
    
    
    
  </div>
  
</div>
`;

exports[`<ArticleCard /> with articleTitle and articleSubTitle props matches with snapshot 1`] = `
<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 jmZvoc"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 kCDtHN"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        
      </div>
    </div>
  </div>
  <div
    className="crowdfunding-card__StyledTitleAndSubtitle-sc-1b0f5ki-1 hPlKae"
  >
    <div
      className="title__StyledTitle-sc-1wv1kzg-1 kxRkqJ"
    >
      <p
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        Custom title
      </p>
    </div>
    
    <div
      className="subtitle__StyledContainerSubtitle-hzl57w-1 cuARNU"
    >
      <span
        className="subtitle__StyledHorizontalStroke-hzl57w-2 dVssq horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular subtitle__StyledSubtitle-hzl57w-3 krHPNc"
      >
        <span
          className="subtitle__StyledTruncate-hzl57w-0 dyLXav"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  
</div>
`;

exports[`<ArticleCard /> with ignored props matches with snapshot 1`] = `
<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 jmZvoc"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 kCDtHN"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        
      </div>
    </div>
  </div>
  <div
    className="crowdfunding-card__StyledTitleAndSubtitle-sc-1b0f5ki-1 hPlKae"
  >
    
    
    
    
  </div>
  
</div>
`;

exports[`<ArticleCard /> with some props matches with snapshot 1`] = `
<a
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href="#foobar"
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 jmZvoc"
  >
    <img
      alt="Image alt"
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      color="#333"
      src="#image"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 kCDtHN"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt="Avatar alt"
          className="k-ButtonImage__img"
          src="#avatar"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        Custom title
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        Custom description
      </div>
    </div>
  </div>
  <div
    className="crowdfunding-card__StyledTitleAndSubtitle-sc-1b0f5ki-1 hPlKae"
  >
    <div
      className="title__StyledTitle-sc-1wv1kzg-1 kxRkqJ"
    >
      <p
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        Custom title
      </p>
    </div>
    
    <div
      className="subtitle__StyledContainerSubtitle-hzl57w-1 cuARNU"
    >
      <span
        className="subtitle__StyledHorizontalStroke-hzl57w-2 dVssq horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular subtitle__StyledSubtitle-hzl57w-3 krHPNc"
      >
        <span
          className="subtitle__StyledTruncate-hzl57w-0 dyLXav"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  
</a>
`;
